--- a/HovyFridge/app/src/main/res/values-ru-rRU/strings.xml
+++ b/HovyFridge/app/src/main/res/values-ru-rRU/strings.xml
@@ -39,4 +39,8 @@
     <string name="send_errors">Отправлять ошибки на сервер</string>
     <string name="show_errors">Показывать сообщения ошибок</string>
     <string name="show_errors_summary">Показывает диалог с сообщением об ошибке, при возникновении любой ошибки</string>
+    <string name="bar_code">Штрих-код:</string>
+    <string name="new_product_name">Введите название продукта:</string>
+    <string name="amount_of_product">Остаток:</string>
+    <string name="added_at">Добавлено в холодильник:</string>
 </resources>
